--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,8 +7,11 @@ ktor {
         modules = [ com.example.ApplicationKt.module ]
     }
 }
+
 jwt {
     domain = "https://jwt-provider-domain/"
-    audience = "jwt-audience"
-    realm = "ktor sample app"
+    secret = "secret"
+    issuer = "http://0.0.0.0:8080/"
+    audience = "http://0.0.0.0:8080/hello"
+    realm = "Access to 'hello'"
 }
